Fixed gradle :runServer; Removed italic from gui buttons